--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img {
     border: dashed white 10px;
 }
 
-div {
+body div {
     height: auto;
     min-height: 125px;
     padding: 20px;
@@ -46,17 +46,25 @@ div {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px 0px 2px 5px;
+    /* border-width: 0px 0px 2px 5px; */
+    border-top: 0px;
+    border-right: 0px;
+    border-left: solid white 5px;
+    border-bottom: solid white 2px;
 }
 
 .blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-width: 2px 5px 0px 0px;
+    /* border-width: 2px 5px 0px 0px; */
+    border-left: 0px;
+    border-bottom: 0px;
+    border-right: solid white 5px;
+    border-top: solid white 2px;
 }
 
-div.blue h2 {
+div.blue h2, div.blue p {
     color: #C4C4C4;
 }
 
@@ -64,7 +72,11 @@ div.blue h2 {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-width: 0px 0px 2px 5px;
+    /* border-width: 0px 0px 2px 5px; */
+    border-top: 0px;
+    border-right: 0px;
+    border-left: solid white 5px;
+    border-bottom: solid white 2px;
 }
 
 div.yellow p {
@@ -75,7 +87,11 @@ div.yellow p {
     background-color: #00D800;
     text-align: left;
     margin-right: 50px;
-    border-width: 2px 5px 0px 0px;
+    /* border-width: 2px 5px 0px 0px; */
+    border-bottom: 0px;
+    border-left: 0px;
+    border-right: solid white 5px;
+    border-top: solid white 2px;
 }
 
 footer {
