--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ div.yellow p {
     color: #707070;
 }
 
-.green {
-    background-color: #00EB00;
+div.green {
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     /* border-width: 2px 5px 0px 0px; */
